# AI_Music_Composer

./: .gitignore  .gitlab-ci.yml  Dockerfile  Gitlab+GCP+CICD.docx  README.md  app.py  kubernetes-deployment.yaml  main.py  pyproject.toml  requirements.txt  setup.py
app/: main.py  utils.py
